GET-1963 | feat(php-sdk2): update codebase to php-sdk2 standard and functionalities. updated codebase to php8 constructors.

--- a/composer.json
+++ b/composer.json
@@ -10,9 +10,9 @@
     ],
     "require": {
         "magento/module-payment": "100.*",
-        "wegetfinancing/php-sdk": "1.*"
+        "wegetfinancing/php-sdk": "v2.2.0"
     },
-    "type": "magento2-module",
+    "type": "magento2-module",E.
     "version": "0.4.0",
     "autoload": {
         "files": [
