GET-1993 | hotfix(composer): fixed typo error

--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,7 @@
         "magento/module-payment": "100.*",
         "wegetfinancing/php-sdk": "v2.2.0"
     },
-    "type": "magento2-module",E.
+    "type": "magento2-module",
     "version": "0.4.0",
     "autoload": {
         "files": [
